# Isotropy_Protocol

./: .gitignore  README.md
Mainnet/: README.md
Mainnet/artifacts/: isotropy_protocol.wasm  isotropy_token.wasm
Mainnet/examples/: controller-instantiate.json  controller-migrate.json  token-instantiate.json
Mainnet/scripts/: build-compatible-wasm.ps1
Mainnet/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
Mainnet/token/: Cargo.toml
Mainnet/token/src/: lib.rs
Testnet/: Cargo.toml  README.md
Testnet/artifacts/: isotropy_protocol.wasm
Testnet/examples/: controller-instantiate.json  token-instantiate.json
Testnet/scripts/: build-compatible-wasm.ps1
Testnet/src/: contract.rs  error.rs  msg.rs  state.rs
