[package]
name = "isotropy-protocol"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
debug-assertions = false
incremental = false
overflow-checks = true

[features]
default = []

[dependencies]
cosmwasm-schema = "1.5.11"
cosmwasm-std = "1.5.11"
cw20 = "1.1.2"
cw2 = "1.1.2"
cw-storage-plus = "1.2.0"
cw-utils = "1.0.3"
isotropy-token = { path = "token", features = ["library"] }
schemars = "0.8.21"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"

[dev-dependencies]
cw-multi-test = "0.20.1"
