[package]
name = "isotropy-token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
debug-assertions = false
incremental = false
overflow-checks = true

[features]
default = []
library = []

[dependencies]
cosmwasm-schema = "1.5.11"
cosmwasm-std = "1.5.11"
cw2 = "1.1.2"
cw20 = "1.1.2"
cw20-base = { version = "1.1.2", features = ["library"] }
schemars = "0.8.21"
serde = { version = "1.0.217", features = ["derive"] }
